--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ebuddy-techincal-test",
+  "name": "ebuddy-technical-test",
   "private": true,
   "scripts": {
     "build": "turbo build",
@@ -15,5 +15,9 @@
   "packageManager": "pnpm@8.15.6",
   "engines": {
     "node": ">=18"
-  }
+  },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
