--- a/apps/backend-repo/tsconfig.json
+++ b/apps/backend-repo/tsconfig.json
@@ -21,12 +21,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": ".",
-    "typeRoots": ["./node_modules/@types", "types"],
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "baseUrl": "."
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.ts"]
+  "include": ["./**/*.ts"]
 }
