--- a/apps/frontend-repo/package.json
+++ b/apps/frontend-repo/package.json
@@ -9,21 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
+    "@reduxjs/toolkit": "^2.3.0",
+    "firebase": "^11.0.1",
+    "js-cookie": "^3.0.5",
     "next": "14.2.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.53.1",
     "react-redux": "^9.1.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.0",
-    "@ebuddy-technical-test/ui": "workspace:*",
-    "@mui/material": "^5.15.12",
-    "@mui/icons-material": "^5.15.12",
-    "@reduxjs/toolkit": "^2.2.1"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@ebuddy-technical-test/eslint-config": "workspace:*",
-    "@ebuddy-technical-test/typescript-config": "workspace:*",
     "@ebuddy-technical-test/shared-types": "workspace:*",
+    "@ebuddy-technical-test/typescript-config": "workspace:*",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
